responsive gemaakt (mobile)

--- a/templates/locatie/new.html.twig
+++ b/templates/locatie/new.html.twig
@@ -5,7 +5,25 @@
 {% block body %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <h1 style="font-size:70px">Maak een nieuwe locatie</h1>
+    <style>
+        h1 {
+            text-align: center;
+        }
+
+        @media only screen and (max-width: 1000px) {
+            body {
+                margin-right: 4%;
+                margin-left: 4%;
+                font-size: 17px;
+            }
+            h1 {
+                font-size: 60px;
+                text-align: center;
+            }
+        }
+    </style>
+
+    <h1>Maak een nieuwe locatie</h1>
 
     {{ include('locatie/_form.html.twig') }}
 
