--- a/templates/locatie/show.html.twig
+++ b/templates/locatie/show.html.twig
@@ -5,6 +5,16 @@
 {% block body %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
+    <style>
+        @media only screen and (max-width: 1000px) {
+            body {
+                margin-right: 4%;
+                margin-left: 4%;
+                font-size: 17px;
+            }
+        }
+    </style>
+
     <table class="table" style="margin-top:5%">
         <tbody>
             <tr>
